# Nova

./: .gitignore  CMakeLists.txt  README.md
compiler/: diag.h  emit.c  emit.h  novac.c  novac_before_sym_use.c  novac_monolith.c  symtab.c  symtab.h
docs/: syntax.md
examples/: fn_test.nova  hello.nova  lifelab.nova  min.nova  rule30.nova  rule30_ascii_min.nova  short_circuit.nova
tests/: CMakeLists.txt
vm/: novavm.c
